Add icon directory to theme search path.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=733998

Signed-off-by: Richard Hughes <richard@hughsie.com>