src/gs-utils.h
@@ -46,6 +46,7 @@ guint	 gs_string_replace		(GString	*string,
 gboolean gs_mkdir_parent		(const gchar	*path,
 					 GError		**error);
 GdkPixbuf *gs_pixbuf_load		(const gchar	*icon_name,
+					 const gchar	*icon_path,
 					 guint		 icon_size,
 					 GError		**error);
 void     gs_reboot                      (GCallback	  reboot_failed);
